--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
           <div class="row-fluid">
             <div class="col-sm-3">
-        <img src="C:\Users\chrst\fullstackclass\week2\Basic-Portfolio\assets\images\portfolio.jpg" class="auth-image" alt="Christopher Brown" />
+        <img src="assets\images\portfolio.jpg" class="auth-image" alt="Christopher Brown" />
               </div>
               <div class="col-sm-12">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet libero elit. Curabitur leo erat, laoreet quis purus et, lacinia sollicitudin ligula. Donec iaculis fringilla blandit. Maecenas ac lorem blandit, pulvinar dolor eget, auctor odio. Vestibulum luctus, purus id mollis viverra, augue lacus iaculis felis, vel iaculis odio est sed urna. Donec lacus purus, eleifend quis molestie rhoncus, egestas eget nisl. Proin maximus ultrices tellus, a placerat dolor sodales nec. Vestibulum nec laoreet turpis. Pellentesque nec quam tellus. Aenean auctor lacus velit, in dictum diam aliquet at.</p>
