--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   <title>Contact | Christopher Brown</title>
   
   <link rel="stylesheet" href="assets\css\reset.css">
-  <link rel="stylesheet" href="C:\Users\chrst\fullstackclass\week2\Basic-Portfolio\assets\css\style.css">
+  <link rel="stylesheet" href="assets\css\style.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
@@ -55,20 +55,22 @@
             </div>
           </div>
           <div class="d-flex align-items-start">
+              <div class="col-sm-12">
                 <div class="work">
                   <div class="row">
                    <img src="https://placehold.it/200x200" class="rounded float-left" alt="Hangman">
                    <h2>Hangman</h2>
                 </div>
+              </div>
 
-                <div class="col-lg-12">
+                <div class="col-sm-12">
                   <div class="work">
                     <img src="https://placehold.it/200x200" class="rounded float-center" alt="RPG Game">
                     <h2>RPG Game</h2>
                  </div>
                 </div>
 
-                  <div class="col-lg-12">
+                  <div class="col-sm-12">
                     <div class="work">
                     <img src="https://placehold.it/200x200" class="rounded float-right" alt="Trivia Game">
                     <h2>Trivia Game</h2>
@@ -76,14 +78,14 @@
                   </div>
 
               <div class="row-fluid">
-                <div class="col-lg-12">
+                <div class="col-sm-12">
                 <div class="work">
                     <img src="https://placehold.it/200x200" class="rounded float-left" alt="Rutgers Info Widget">
                     <h2>Rutgers Info Widget</h2>
                 </div>
                 </div>
 
-                <div class="col-lg-12">
+                <div class="col-sm-12">
                 <div class="work">
                     <img src="https://placehold.it/200x200" class="rounded float-center" alt="Rock Paper Scissors">
                     <h2>Rock Paper Scissors</h2>
