--- a/contact.html
+++ b/contact.html
@@ -17,36 +17,38 @@
 </head>
 
 <body>
-    <header id="header1">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-6">
-            <a href="index.html" id="headername">Christopher Brown</a>
-            </div>
-            <div class="col-sm-6">
-                <nav class="navbar sticky-top navbar-light bg-light">
-                    <a class="navbar-brand" href="index.html">Home</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                      <ul class="navbar-nav">
-                        <li class="nav-item active">
-                          <a class="navbar-brand" href="index.html">About Me <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="navbar-brand" href="contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="navbar-brand" href="portfolio.html">Portfolio</a>
-                        </li>
-                      </ul>
-                    </div>
-                </nav>
-            </div>
-          </div>
+  <section id="navbar1">
+    <div class="header" id="header">
+      <div class="row">
+        <div class="col-sm-6">
+        <a href="index.html"></a> <h1>Christopher Brown</h1></a>
         </div>
-    </header>
+      </div>
+    </div>
+        <div class="col-sm-6">
+        <nav id="topnav1" class="navbar sticky-top navbar-light bg-light">
+          <a class="navbar-brand" href="index.html">Home</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="navbar-brand" href="index.html">About Me <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="navbar-brand" href="contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="navbar-brand" href="portfolio.html">Portfolio</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        </div>
+       </div>
+       </div>
+</section>
 
     <div id="main1" class="container">
         <section class="main-section">    
