--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
 </head>
 
 <body>
-    <header id="header1">
-        <div class="container">
+    <section id="navbar1">
+        <div class="header" id="header">
           <div class="row">
             <div class="col-sm-6">
-            <a href="index.html" id="headername">Christopher Brown</a>
+            <a href="index.html"></a> <h1>Christopher Brown</h1></a>
             </div>
+          </div>
+        </div>
             <div class="col-sm-6">
-            <nav class="navbar sticky-top navbar-light bg-light">
+            <nav id="topnav1" class="navbar sticky-top navbar-light bg-light">
               <a class="navbar-brand" href="index.html">Home</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -45,7 +47,7 @@
             </div>
            </div>
            </div>
-    </header>
+    </section>
 
     <div id="main1" class="container">
         <section class="main-section">    
