--- a/portfolio.html
+++ b/portfolio.html
@@ -13,39 +13,42 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
 </head>
 
 <body>
-    <header id="header1">
-        <div class="container">
+    <section id="navbar1">
+        <div class="header" id="header">
           <div class="row">
             <div class="col-sm-6">
-            <a href="index.html" id="headername">Christopher Brown</a>
+            <a href="index.html"></a> <h1>Christopher Brown</h1></a>
             </div>
+          </div>
+        </div>
             <div class="col-sm-6">
-                <nav class="navbar sticky-top navbar-light bg-light">
-                    <a class="navbar-brand" href="index.html">Home</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                      <ul class="navbar-nav">
-                        <li class="nav-item active">
-                          <a class="navbar-brand" href="index.html">About Me <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="navbar-brand" href="contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="navbar-brand" href="portfolio.html">Portfolio</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </nav>
+            <nav id="topnav1" class="navbar sticky-top navbar-light bg-light">
+              <a class="navbar-brand" href="index.html">Home</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="navbar-brand" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="navbar-brand" href="contact.html">Contact</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="navbar-brand" href="portfolio.html">Portfolio</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
             </div>
            </div>
            </div>
-    </header>
+    </section>
 
     <div id="main1" class="container">
         <section class="main-section">    
@@ -55,13 +58,11 @@
             </div>
           </div>
           <div class="d-flex align-items-start">
-              <div class="col-sm-8">
                 <div class="work">
                   <div class="row">
                    <img src="https://placehold.it/200x200" class="rounded float-left" alt="Hangman">
                    <h2>Hangman</h2>
                 </div>
-              </div>
 
                 <div class="col-sm-8">
                   <div class="work">
